--- a/build.gradle
+++ b/build.gradle
@@ -14,18 +14,28 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'gs-rest-service'
+    baseName = 'gs-accessing-data-jpa'
     version =  '0.1.0'
 }
 
 repositories {
     mavenCentral()
+    maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.3' //no me estaba pinchando el jackson  y le meti esto
+    compile('org.springframework:spring-web')
+    compile('org.springframework:spring-webmvc')
+    compile("com.h2database:h2")
+
+    // Use MySQL Connector-J
+    compile 'mysql:mysql-connector-java'
+
+    testCompile("junit:junit")
 }
